maybe the game is working in cli mode