@@ -27,10 +27,9 @@ public class ControllerClient extends GameClientListened {
     private GameClient gameClient;
     private MatchType matchType;
     private ArrayList<PlayerClient> playerClients;
-    private List<ClientPhaseController> clientPhaseController;
     private Map<CLICommands, GameCommand> commands;
     private Map<GamePhase, ClientPhaseController> phases;
-    private ClientPhaseController oldPhase;
+    private GamePhase oldPhase;
     private Wizard wizardLocal;
 
     public ControllerClient() {
@@ -46,19 +45,19 @@ public class ControllerClient extends GameClientListened {
 
     public void instantiateAllPhases() {
         phases = Map.ofEntries(
-                entry(GamePhase.INIT_PHASE, new InitPhaseClient(Arrays.asList(commands.get(CLICommands.CONNECT_SERVER), commands.get(CLICommands.QUIT)))),
+                entry(GamePhase.INIT_PHASE, new InitPhase(Arrays.asList(commands.get(CLICommands.CONNECT_SERVER), commands.get(CLICommands.QUIT)))),
                 entry(GamePhase.NICK_PHASE, new NicknamePhase(new ArrayList<>(Arrays.asList(commands.get(CLICommands.SET_NICKNAME), commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.SELECT_MATCH_PHASE, new SelectMatchPhaseClient(new ArrayList<>(Arrays.asList(commands.get(CLICommands.CREATE_MATCH), commands.get(CLICommands.JOIN_MATCH_BY_TYPE), commands.get(CLICommands.JOIN_MATCH_BY_ID), commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.WAIT_PHASE, new WaitPhaseClient(new ArrayList<>(Arrays.asList(commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.PLANIFICATION_PHASE, new PlanificationPhaseClient(new ArrayList<>(Arrays.asList(commands.get(CLICommands.PLAY_CARD), commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.MOVE_ST_PHASE, new MoveStudentsPhaseClient(new ArrayList<>(Arrays.asList(commands.get(CLICommands.MOVE_STUDENT), commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.MOVE_MN_PHASE, new MoveMotherNaturePhaseClient(new ArrayList<>(Arrays.asList(commands.get(CLICommands.MOVE_MOTHER_NATURE), commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.MOVE_CL_PHASE, new MoveCloudPhaseClient(new ArrayList<>(Arrays.asList(commands.get(CLICommands.MOVE_FROM_CLOUD), commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.SET_CH_CARD_PHASE, new SetCharacterInputPhaseClient(new ArrayList<>(List.of(commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.PLAY_CH_CARD_PHASE, new PlayCharacterCardPhaseClient(new ArrayList<>(List.of(commands.get(CLICommands.QUIT))))),
-                entry(GamePhase.QUIT_PHASE, new QuitPhaseClient(new ArrayList<>(Arrays.asList(commands.get(CLICommands.UNDO), commands.get(CLICommands.QUIT))))));
-        oldPhase = phases.get(GamePhase.INIT_PHASE);
-        //notifyClientPhase(oldPhase);
+                entry(GamePhase.SELECT_MATCH_PHASE, new SelectMatchPhase(new ArrayList<>(Arrays.asList(commands.get(CLICommands.CREATE_MATCH), commands.get(CLICommands.JOIN_MATCH_BY_TYPE), commands.get(CLICommands.JOIN_MATCH_BY_ID), commands.get(CLICommands.QUIT))))),
+                entry(GamePhase.WAIT_PHASE, new WaitPhase(new ArrayList<>(Arrays.asList(commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
+                entry(GamePhase.PLANIFICATION_PHASE, new PlanificationPhase(new ArrayList<>(Arrays.asList(commands.get(CLICommands.PLAY_CARD), commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
+                entry(GamePhase.MOVE_ST_PHASE, new MoveStudentsPhase(new ArrayList<>(Arrays.asList(commands.get(CLICommands.MOVE_STUDENT), commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
+                entry(GamePhase.MOVE_MN_PHASE, new MoveMotherNaturePhase(new ArrayList<>(Arrays.asList(commands.get(CLICommands.MOVE_MOTHER_NATURE), commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
+                entry(GamePhase.MOVE_CL_PHASE, new MoveCloudPhase(new ArrayList<>(Arrays.asList(commands.get(CLICommands.MOVE_FROM_CLOUD), commands.get(CLICommands.TEXT_MESSAGE), commands.get(CLICommands.QUIT))))),
+                entry(GamePhase.SET_CH_CARD_PHASE, new SetCharacterInputPhase(new ArrayList<>(List.of(commands.get(CLICommands.QUIT))))),
+                entry(GamePhase.PLAY_CH_CARD_PHASE, new PlayCharacterCardPhase(new ArrayList<>(List.of(commands.get(CLICommands.QUIT))))),
+                entry(GamePhase.QUIT_PHASE, new QuitPhase(new ArrayList<>(Arrays.asList(commands.get(CLICommands.UNDO), commands.get(CLICommands.QUIT))))));
+        oldPhase = GamePhase.INIT_PHASE;
+        notifyClientPhase(phases.get(oldPhase));
     }
 
     public boolean connect(byte[] ipAddress, int port) {
@@ -70,28 +69,29 @@ public class ControllerClient extends GameClientListened {
         new Thread(new ServerListener(socket, this)).start();
         serverSender = new ServerSender(socket);
 
-        setNewGamePhase();
+
+
         return true;
     }
 
     public void setNewGamePhase() {
-        //TODO check if this work with quit
-        //super.notify(phases.get(GamePhase.values()[oldPhase.ordinal() + 1]));
-        //oldPhase = phases.get(GamePhase.values()[oldPhase.ordinal() + 1]);
+        GamePhase newPhase=GamePhase.values()[oldPhase.ordinal() + 1];
+        super.notifyClientPhase(phases.get(newPhase));
+        oldPhase = newPhase;
 
     }
 
     public void changePhaseAndCurrentPlayer(GamePhase gamePhase, Byte currentPlayer) {
         //se arriva il messaggio e se stesso è il current player si imposta fase del messaggio
-        //currentPlayer!=se stesso-> wait Phas
-        // TODO set phase in view cli
+        //currentPlayer!=se stesso-> wait Phase
         // this.gamePhase = gamePhase;
         gameClient.setCurrentPlayer(currentPlayer);
         if (gameClient.getCurrentPlayer().getWizard() != wizardLocal) {
-            super.notify(GamePhase.WAIT_PHASE);
+            oldPhase=GamePhase.WAIT_PHASE;
+            super.notifyClientPhase(phases.get(GamePhase.WAIT_PHASE));
         } else {
-            //oldPhase = gamePhase;
-            super.notify(gamePhase);
+            oldPhase = gamePhase;
+            super.notifyClientPhase(phases.get(gamePhase));
         }
     }
 
@@ -109,11 +109,11 @@ public class ControllerClient extends GameClientListened {
             // decorate phases
             if (matchType.isExpert()) {
                 // TODO find a way to remove cast
-                phases.put(GamePhase.MOVE_ST_PHASE, new ExpertClientGamePhaseDecorator((AbstractClientGamePhase) phases.get(GamePhase.MOVE_ST_PHASE), List.of(commands.get(CLICommands.CHOOSE_CHARACTER))));
-                phases.put(GamePhase.MOVE_MN_PHASE, new ExpertClientGamePhaseDecorator((AbstractClientGamePhase) phases.get(GamePhase.MOVE_MN_PHASE), List.of(commands.get(CLICommands.CHOOSE_CHARACTER))));
-                phases.put(GamePhase.MOVE_CL_PHASE, new ExpertClientGamePhaseDecorator((AbstractClientGamePhase) phases.get(GamePhase.MOVE_CL_PHASE), List.of(commands.get(CLICommands.CHOOSE_CHARACTER))));
-                phases.put(GamePhase.PLAY_CH_CARD_PHASE, new ExpertClientGamePhaseDecorator((AbstractClientGamePhase) phases.get(GamePhase.PLAY_CH_CARD_PHASE), Arrays.asList(commands.get(CLICommands.PLAY_CHARACTER), commands.get(CLICommands.DELETE_LAST_INPUT), commands.get(CLICommands.UNDO))));
-                phases.put(GamePhase.SET_CH_CARD_PHASE, new ExpertClientGamePhaseDecorator((AbstractClientGamePhase) phases.get(GamePhase.SET_CH_CARD_PHASE), Arrays.asList(commands.get(CLICommands.SET_CHARACTER_INPUT), commands.get(CLICommands.PLAY_CHARACTER), commands.get(CLICommands.DELETE_LAST_INPUT), commands.get(CLICommands.UNDO))));
+                phases.put(GamePhase.MOVE_ST_PHASE, new ExpertClientPhaseDecorator((ClientPhase) phases.get(GamePhase.MOVE_ST_PHASE), List.of(commands.get(CLICommands.CHOOSE_CHARACTER))));
+                phases.put(GamePhase.MOVE_MN_PHASE, new ExpertClientPhaseDecorator((ClientPhase) phases.get(GamePhase.MOVE_MN_PHASE), List.of(commands.get(CLICommands.CHOOSE_CHARACTER))));
+                phases.put(GamePhase.MOVE_CL_PHASE, new ExpertClientPhaseDecorator((ClientPhase) phases.get(GamePhase.MOVE_CL_PHASE), List.of(commands.get(CLICommands.CHOOSE_CHARACTER))));
+                phases.put(GamePhase.PLAY_CH_CARD_PHASE, new ExpertClientPhaseDecorator((ClientPhase) phases.get(GamePhase.PLAY_CH_CARD_PHASE), Arrays.asList(commands.get(CLICommands.PLAY_CHARACTER), commands.get(CLICommands.DELETE_LAST_INPUT), commands.get(CLICommands.UNDO))));
+                phases.put(GamePhase.SET_CH_CARD_PHASE, new ExpertClientPhaseDecorator((ClientPhase) phases.get(GamePhase.SET_CH_CARD_PHASE), Arrays.asList(commands.get(CLICommands.SET_CHARACTER_INPUT), commands.get(CLICommands.PLAY_CHARACTER), commands.get(CLICommands.DELETE_LAST_INPUT), commands.get(CLICommands.UNDO))));
             }
             gameClient.addListener(this);
             attachModel(gameClient);
@@ -130,6 +130,7 @@ public class ControllerClient extends GameClientListened {
 
     public void error(String e) {
         notifyError(e);
+        notifyClientPhase(phases.get(oldPhase));
     }
 
     public void ok() {
